# frame-sampling

./: .gitignore  README.md  pyproject.toml
frame_indices/VideoMME/: csta_1000_16.csv  csta_1000_256.csv  csta_1000_64.csv  csta_1000_96.csv  fps_4_16.csv  fps_4_256.csv  fps_4_64.csv  maxinfo_1000_16_R=8_tol=0.3.csv  maxinfo_1000_64_R=8_tol=0.3.csv  maxinfo_1000_96_R=8_tol=0.3.csv
scripts/: benchmark_fps_model.py  benchmark_fps_ovis.py  benchmark_models.py  benchmark_single_frame.py  extract_videomme_frames.py  vlm.py  vlm_VideoMME.py  vlm_VideoMME_evaluation.py
src/video_model_research/: ai_models.py  bench_utils.py  custom_read_video.py  global_video_info.py  maxinfo_selection.py  metrics.py
src/video_model_research/CSTA/: config.py  dataset.py  evaluation_metrics.py  generate_summary.py  generate_video.py  inference.py  knapsack_implementation.py  model.py  train.py  utils.py  video_helper.py
src/video_model_research/CSTA/kts/: cpd_auto.py  demo.py
src/video_model_research/CSTA/models/: EfficientNet.py  GoogleNet.py  MobileNet.py  ResNet.py  positional_encoding.py
src/video_model_research/CSTA/splits/: SumMe_splits.txt  TVSum_splits.txt
src/video_model_research/common/: utils.py  video_backend_manager.py
src/video_model_research/intern/: intern.py  utils.py
src/video_model_research/maxvolpy/docs/: make.bat
src/video_model_research/ovis/: ovis.py  utils.py
src/video_model_research/qwen2/: qwen2.py
src/video_model_research/qwen2_5/: qwen2_5.py
src/video_model_research/smolvlm/: smolvlm.py
